# return-desk-env

./: .env.example  .gitignore  Dockerfile  README.md  SUBMISSION_SUMMARY.md  __init__.py  client.py  deploy_to_hf.py  final_presubmission_report.md  graders.py  hackathon_readiness_report.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  trainer.py
outputs/: baseline_scores.json
scripts/: prep_submission.sh
server/: __init__.py  app.py  environment.py
tasks/: __init__.py  catalog.py
tests/: test_environment_logic.py  test_graders.py  test_inference_smoke.py
